@@ -163,13 +163,13 @@ public abstract class ArithmeticExpression extends BinaryExpression
         {
 
         case INTEGER:
-            return new Integer(left.intValue() + right.intValue());
+            return Integer.valueOf(left.intValue() + right.intValue());
 
         case LONG:
-            return new Long(left.longValue() + right.longValue());
+            return Long.valueOf(left.longValue() + right.longValue());
 
         default:
-            return new Double(left.doubleValue() + right.doubleValue());
+            return Double.valueOf(left.doubleValue() + right.doubleValue());
         }
     }
 
@@ -179,13 +179,13 @@ public abstract class ArithmeticExpression extends BinaryExpression
         {
 
         case INTEGER:
-            return new Integer(left.intValue() - right.intValue());
+            return Integer.valueOf(left.intValue() - right.intValue());
 
         case LONG:
-            return new Long(left.longValue() - right.longValue());
+            return Long.valueOf(left.longValue() - right.longValue());
 
         default:
-            return new Double(left.doubleValue() - right.doubleValue());
+            return Double.valueOf(left.doubleValue() - right.doubleValue());
         }
     }
 
@@ -195,24 +195,24 @@ public abstract class ArithmeticExpression extends BinaryExpression
         {
 
         case INTEGER:
-            return new Integer(left.intValue() * right.intValue());
+            return Integer.valueOf(left.intValue() * right.intValue());
 
         case LONG:
-            return new Long(left.longValue() * right.longValue());
+            return Long.valueOf(left.longValue() * right.longValue());
 
         default:
-            return new Double(left.doubleValue() * right.doubleValue());
+            return Double.valueOf(left.doubleValue() * right.doubleValue());
         }
     }
 
     protected Number divide(Number left, Number right)
     {
-        return new Double(left.doubleValue() / right.doubleValue());
+        return Double.valueOf(left.doubleValue() / right.doubleValue());
     }
 
     protected Number mod(Number left, Number right)
     {
-        return new Double(left.doubleValue() % right.doubleValue());
+        return Double.valueOf(left.doubleValue() % right.doubleValue());
     }
 
     private int numberType(Number left, Number right)
